# ChangeLog for dev-haskell/haddock
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/haddock/ChangeLog,v 1.57 2009/04/19 15:20:37 kolmodin Exp $

*haddock-2.4.2 (19 Apr 2009)

  19 Apr 2009; Lennart Kolmodin <kolmodin@gentoo.org> +haddock-2.4.2.ebuild:
  Version bump. Depends on dev-lang/ghc-6.10.2, so it's currently masked for
  testing.

  04 Oct 2008; Raúl Porcel <armin76@gentoo.org> haddock-0.8.ebuild:
  alpha/ia64 stable

  02 Aug 2008; Lennart Kolmodin <kolmodin@gentoo.org> haddock-0.8.ebuild:
  inherit autotools. Spotted by dleverton.

  08 Jul 2008; Lennart Kolmodin <kolmodin@gentoo.org> haddock-0.8.ebuild:
  Change autoconf into eautoconf, and minor repoman fixes.

*haddock-0.9 (26 Jan 2008)

  26 Jan 2008; Duncan Coutts <dcoutts@gentoo.org> -haddock-0.7.ebuild,
  +haddock-0.9.ebuild:
  Add new version and remove old version which had some QA issues.

  13 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> haddock-0.8.ebuild:
  Updates for upward compatability with cabal-1.2 and ghc-6.8

  12 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> haddock-0.7.ebuild:
  Remove unnecessary blocker.

  31 Oct 2007; Duncan Coutts <dcoutts@gentoo.org> haddock-0.7.ebuild,
  haddock-0.8.ebuild:
  Drop virtual/ghc in favour of dev-lang/ghc

  11 Aug 2007; Steve Dibb <beandog@gentoo.org> haddock-0.8.ebuild:
  amd64 stable, bug 186849

  30 Jul 2007; Markus Rothe <corsair@gentoo.org> haddock-0.8.ebuild:
  Stable on ppc64; bug #186849

  30 Jul 2007; Jeroen Roovers <jer@gentoo.org> haddock-0.8.ebuild:
  Stable for HPPA (bug #186849).

  30 Jul 2007; Ferris McCormick <fmccor@gentoo.org> haddock-0.8.ebuild:
  Sparc stable --- Bug #186849 --- all as expected.

  28 Jul 2007; nixnut <nixnut@gentoo.org> haddock-0.8.ebuild:
  Stable on ppc wrt bug 186849

  26 Dec 2006; Timothy Redaelli <drizzt@gentoo.org> haddock-0.8.ebuild:
  Add ~x86-fbsd keyword.

  12 Oct 2006; Duncan Coutts <dcoutts@gentoo.org> haddock-0.7.ebuild: