@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/haddock/haddock-0.8.ebuild,v 1.15 2008/10/04 10:12:48 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/haddock/haddock-0.8.ebuild,v 1.16 2009/04/26 16:05:27 kolmodin Exp $
 
 CABAL_FEATURES="bin"
 inherit haskell-cabal eutils versionator autotools prefix
@@ -17,7 +17,7 @@ KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solari
 
 IUSE="doc"
 
-DEPEND=">=dev-lang/ghc-6.4
+DEPEND="<dev-lang/ghc-6.10
 		>=dev-haskell/cabal-1.1.4
 	doc? (  ~app-text/docbook-xml-dtd-4.2
 			app-text/docbook-xsl-stylesheets
