@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/haddock/haddock-0.9.ebuild,v 1.1 2008/01/26 20:11:10 dcoutts Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/haddock/haddock-0.9.ebuild,v 1.2 2009/04/26 16:05:27 kolmodin Exp $
 
 CABAL_FEATURES="bin"
 inherit haskell-cabal eutils autotools prefix
@@ -14,7 +14,7 @@ SLOT="0"
 KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
 IUSE="doc"
 
-DEPEND=">=dev-lang/ghc-6.4
+DEPEND="<dev-lang/ghc-6.10
 		>=dev-haskell/cabal-1.2
 	doc? (  ~app-text/docbook-xml-dtd-4.2
 			app-text/docbook-xsl-stylesheets
